PPL-Sources/PPL-FE/src/test/resources/CoCos/Invalid/IncrementOnlyAssignment2.par
IncrementOnlyAssignment2 {

seq main() : Void {
    var Int a = 10
    var Int b
    var Int c
    b = a++
    c = b--
}
}